Bug 715129 File picker can't pick applications on Vista or later r=jimm